--- a/style.css
+++ b/style.css
@@ -101,7 +101,9 @@ h1, h2, h3 {
   height: 1.5rem;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0,0,0,0.7)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22' /%3e%3c/svg%3e");
 }
-
+.img-logo {
+  height: 65px;
+}
 /* ========================
    HERO SECTION (Dell Style)
 ======================== */
